--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1132,7 +1132,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Footer
+# fpro
 --------------------------------------------------------------*/
 #footer {
   background: #f7f8f9;
